# FHE-S4

./: CMakeLists.txt  CPPS4README.md  OpenFHE Workstation Access & Quick-Start.md  README_run_inference_fhe_shell_new.md  VERIFICATION_vs_official_s4d.md  adding_problem.py  export_for_openfhe.py  fhe_linear_demo.py  openfhe_toeplitz.cpp  run_inference_fhe_shell.py  run_inference_fhe_shell_new.py  s4d_adding_best.pt  s4d_adding_results.json  tenseal_context.py  tenseal_min_bench.py  toeplitz_test_data.json  train_mini_s4d.py
fhe/: tenseal_context.py
scripts/: run_inference_fhe_shell.py
